fix dark mode issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,15 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+  html{ color-scheme: dark;}
+}
+
+/* If the user prefers light mode, 
+we still enforce color-scheme: dark, despite the user preference */
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: dark;
+  }
 }
 
 body {
